Added count down timer to show for each round

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,6 +13,7 @@ html(lang="en")
         .gameContainer#jsGame
             .main
                 #jsNotifs
+                #jsCountDown
                 canvas.canvas#jsCanvas
                 .controls#jsControls
                     button#jsMode Fill
